dnl Process this file with autoconf to produce a configure script.
AC_INIT(fnmatch.c)		dnl A distinctive file to look for in srcdir.
AC_PREREQ(2.5)			dnl Minimum Autoconf version required.
dnl CYGNUS LOCAL: Don't search; just default to cc, add AC_SUBST(cc)
dnl AC_PROG_CC
CC=${CC-cc}
AC_SUBST(CC)
AC_CHECK_PROG(AR, ar, ar, ar)
AC_PROG_RANLIB
AC_PROG_CPP			dnl Later checks need this.
dnl These two want to come early.
AC_AIX
AC_MINIX
AC_ISC_POSIX
AC_CONST
AC_HEADER_STDC
AC_CHECK_HEADERS(memory.h unistd.h string.h)
AC_HEADER_DIRENT
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_ALLOCA
AC_FUNC_STRCOLL
AC_OUTPUT(Makefile)
